--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "bottleneck": "^2.19.5",
     "gatsby-source-filesystem": "^2.11.1",
     "lodash": "^4.17.20",
     "tiny-async-pool": "^1.1.0"
